--- a/HoliWeb/index.html
+++ b/HoliWeb/index.html
@@ -83,7 +83,7 @@
 
         <div class="container">
 
-          <a class="navbar-brand" href="#!"><strong>PLAYAS</strong></a>
+          <a class="navbar-brand" href="#!"><strong>INICIO</strong></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
@@ -100,6 +100,10 @@
 
                 <li class="nav-item">
                   <a class="nav-link" href="#!">Museos</a>
+                </li>
+              
+                <li class="nav-item">
+                  <a class="nav-link" href="#!">Pueblos Mágicos</a>
                 </li>
             </ul>
       </div>
